z-index - bug webkit

--- a/wp-content/themes/ajaccio-marine-center/css/choixBateaux.less
+++ b/wp-content/themes/ajaccio-marine-center/css/choixBateaux.less
@@ -1,8 +1,8 @@
 #choixBateaux { margin:180px 70px 0 70px;  min-width:980px;
 	h1 { .novecentowideLight(); .fontSize30(); color:@colorOrange; margin-bottom:40px; }
-	article { position:relative; display:block; width:48%; float:left; vertical-align:top; margin-bottom:30px;
-		img { display:inline-block; width:35%; height:auto; .borderRadius(50%); font-size:0; vertical-align:top; }
-		.mini-description { display:inline-block; margin-left:5%; width:60%; font-size:0; vertical-align:top; 
+	article { position:relative; display:block; width:48%; float:left; vertical-align:top; margin-bottom:30px; font-size:0;
+		img { display:inline-block; width:35%; height:auto; .borderRadius(50%); vertical-align:top; }
+		.mini-description { display:inline-block; margin-left:5%; width:60%; vertical-align:top; 
 			h2 { .novecentowideLight(); .fontSize20(); color:@colorOrange; }
 			p { .fontSize12(); color:@colorGray; text-align:justify; line-height:18px; 
 				&:before { content:''; display:block; height:1px; width:40px; background:@colorOrange; margin:30px 0; }
