--- a/wp-content/themes/ajaccio-marine-center/css/services.less
+++ b/wp-content/themes/ajaccio-marine-center/css/services.less
@@ -1,7 +1,7 @@
 #services { margin:180px 70px 0 70px;  min-width:980px;
-	article { position:relative; display:block; float:left; margin-right:5%; .calcWidthKit(30%); vertical-align:top;
+	article { position:relative; display:block; float:left; margin-right:5%; .calcWidthKit(30%); vertical-align:top; font-size:0;
 		img { display:inline-block; width:20%; height:auto; .borderRadius(50%); }
-		h1 { float:right; display:inline-block; .novecentowideLight(); .fontSize30(); color:@colorOrange; vertical-align:top; }
+		h1 { display:inline-block;  width:70%; margin-left:10%; .novecentowideLight(); .fontSize30(); color:@colorOrange; vertical-align:top; }
 		p { .fontSize12(); color:@colorGray; margin-bottom:30px; text-align:justify; line-height:18px;
 			&:before { content:''; display:block; height:1px; width:40px; background:@colorOrange; margin:30px 0; }
 		}
